# websockets-plusplus

./: .gitignore  CMakeLists.txt  README.md
CLIENT/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
COMMON/: Common.cpp  Common.h
SERVER/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
WS_CORE/: CMakeLists.txt  main.cpp
WS_CORE/include/BASE/: Base.cpp  Base.h
WS_CORE/include/SERVER/: TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h
WS_CORE/include/SERVERSTUFF/: ServerStuff.cpp  ServerStuff.h
